--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "vue": "^2.6.10",
+    "vue-draggable": "^2.0.2",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.21.0",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
