--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
+    "vue-cli-plugin-axios": "^0.0.4",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
